--- a/compose.yaml
+++ b/compose.yaml
@@ -1,7 +1,14 @@
+name: test
 services:
-  grafana-lgtm:
-    image: 'grafana/otel-lgtm:latest'
+  prometheus:
+    image: prom/prometheus
     ports:
-      - '3000'
-      - '4317'
-      - '4318'
+      - 9090:9090
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+  grafana:
+    image: grafana/grafana
+    ports:
+      - 3000:3000
